[package]
name = "buildkite-cache-manager"
version = "1.0.0"
edition = "2021"
description = "CLI tool for managing Buildkite CI cache on Hetzner storage - read, write, list and prune cached artifacts"
license = "MIT"
repository = "https://github.com/MinaProtocol/mina-release-toolkit"
keywords = ["buildkite", "ci", "cache", "hetzner"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "buildkite-cache-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.37", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
regex = "1.11"
tabled = "0.17"

[dev-dependencies]
tempfile = "=3.15.0"
pretty_assertions = "1.4"
