[package]
name = "release-manager"
version = "1.0.0"
edition = "2021"
authors = ["Mina Protocol Team"]
description = "Mina Protocol Release Manager - Rust implementation"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
colored = "2.0"
tempfile = "3.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
shell-escape = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.reqwest]
version = "0.11"
features = ["json", "stream"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"