[package]
name = "release-manager"
version = "1.0.0"
edition = "2021"
authors = ["Mina Protocol Team"]
description = "Mina Protocol Release Manager - Rust implementation"
license = "Apache-2.0"

[features]
# Integration tests that need Docker (for MinIO containers), `deb-s3`,
# `dpkg-deb`, and `aws` on PATH. Off by default so `cargo test` stays fast
# and works on dev boxes without those tools. CI enables it on Linux.
integration-test = []

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
colored = "2.0"
tempfile = "3.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
shell-escape = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dependencies.reqwest]
version = "0.11"
# default-features = false drops the native-tls / openssl-sys
# dependency that breaks musl static builds. `rustls-tls` gives us
# back HTTPS support in pure Rust, matching the pattern
# mina-bench-upload already follows with its influxdb2 feature pin.
default-features = false
features = ["json", "stream", "rustls-tls"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
testcontainers-modules = { version = "0.13", features = ["minio"] }